--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,8 @@
 @import url(./reset.css);
 @import url(./global.css);
+@import url(./fontes\ e\ cores.css);
+@import url(./menu.css);
+@import url(./animais.css);
+@import url(./faq.css);
+@import url(./contato.css);
+@import url(./footer.css);
