--- a/css/global.css
+++ b/css/global.css
@@ -32,13 +32,13 @@ body {
   }
 }
 
-.js-scroll {
+[data-anime="scroll"] {
   opacity: 0;
   transform: translate3d(-30px, 0, 0);
   transition: 0.3s;
 }
 
-.js-scroll.ativo {
+[data-anime="scroll"].ativo {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
