--- a/css/contato.css
+++ b/css/contato.css
@@ -30,6 +30,13 @@
   background: #3f4;
 }
 
+.btc-preco {
+  background: #3f4;
+  padding: 0.2rem 0.5rem;
+  font-weight: bold;
+  border-radius: 2px;
+}
+
 @media (max-width: 700px) {
   .mapa,
   .dados {
