--- a/css/faq.css
+++ b/css/faq.css
@@ -22,12 +22,19 @@
 }
 
 [data-anime="accordion"] dt::after {
-  content: "⬎";
+  content: "";
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  background: url(../img/arrow-red.svg) no-repeat center center;
   margin-left: 10px;
+  transform: rotate(90deg);
+  transition: transform 0.3s;
 }
 
 [data-anime="accordion"] dt.ativo::after {
-  content: "⬏";
+  content: "";
+  transform: rotate(-90deg);
 }
 
 [data-anime="accordion"] dd.ativo {
