--- a/css/menu.css
+++ b/css/menu.css
@@ -17,6 +17,13 @@
   margin-right: 10px;
 }
 
+.arrow-black {
+  background: url(../img/arrow-black.svg) no-repeat center center;
+  display: inline-block;
+  width: 8px;
+  height: 10px;
+}
+
 @media (max-width: 700px) {
   .menu {
     grid-column: 1;
